welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value taille
  taille = len(nums)
  ^indexOfValue:3: error: not found: value taille
  for (i <- 0 to taille) {
                 ^