welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  taille = len(nums)
  for (i <- 0 to taille) {
    if (nums(i)==lookingFor) {return i}
  }
  return  -1 }